# StepDeepResearch

./: .env-example  .gitignore  README.md  config.yaml  pyproject.toml
agentkit/trace/: __init__.py  builder.py  context.py  default.py  local_tracer.py  remote_tracer.py  span.py  tracer.py  types.py
cortex/: __init__.py  env.py  runtime_config.py
cortex-ui/: .gitlab-ci.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
cortex-ui/src/: App.tsx  index.css  main.tsx
cortex-ui/src/components/: EndpointConfig.tsx  ErrorBoundary.tsx  FilePanel.tsx  FinalAnswer.tsx  SearchResultsPanel.tsx  ShellPanel.tsx  TodoPanel.tsx  WebPagePanel.tsx
cortex-ui/src/pages/: AgentList.tsx  ChatPage.tsx
cortex-ui/src/services/: api.ts
cortex-ui/src/types/: citation.ts  index.ts
cortex-ui/src/utils/: citationParser.ts
cortex/agents/: __init__.py  agent_factory.py  base_agent.py  base_step_agent.py  react_agent.py  types.py
cortex/agents/checkpoint_agent/: checkpoint_agent.py  checkpointer.py  react_agent.py
cortex/agents/input/: input.py
cortex/context/: __init__.py  base_context.py  file_context.py  simple_context.py
cortex/examples/: demo_agent_cli.py  demo_agent_with_orchestrator.py  demo_agent_with_tool.py  demo_checkpoint.py  demo_toolset_channel.py  server.py
cortex/model/: __init__.py  definition.py  provider.py  stepfun_chat.py  stepfun_provider.py  utils.py
cortex/orchestrator/: __init__.py  local_runner.py  orchestrator.py  remote_runner.py  runner.py  types.py
cortex/server/: http_server.py
cortex/server/channel/: channel.py  (+3 more)
cortex/tools/: __init__.py  agent_tool.py  base.py  channel.py  client_tool.py  function_tool.py  mcp.py  mcp_tool.py  session_tool.py  toolset.py  types.py  ublock_agent_tool.py  unblock_client_tool.py
cortex/tui/: __init__.py  tui.py
cortex/utils/: __init__.py  generator_merger.py  generator_merger_examples.py
demo/: server.py
demo/dr_agent/: __init__.py  dr_agent.py
demo/tools/: batch_open.py  batch_search.py  batch_web_surfer.py  file.py  open.py  search.py  shell.py  text_truncator.py  todo.py  utils.py
scripts/: runner.py
scripts/configs/: prompt.py  runner_example.yaml  tasks.example.json
(+8 files in other folders)
